--- a/Front-End/frontend/src/app/query/query.component.html
+++ b/Front-End/frontend/src/app/query/query.component.html
@@ -1,1 +1,5 @@
-<p>query works!</p>
+<h2>Query the Database...</h2>
+<form action="" method="POST">
+	<input type="text" placeholder="USERID">
+	<input type="submit" value="Query">
+</form>
