--- a/Front-End/frontend/src/app/insert/insert.component.html
+++ b/Front-End/frontend/src/app/insert/insert.component.html
@@ -1,1 +1,21 @@
-<p>insert works!</p>
+<!--<h2> Add New Transaction:</h2>
+<div class="container">
+	<form [formGroup]="form" (ngSubmit)="submitForm()">
+		<div class="form-group">
+			<input type="text" (change)="uploadText($event)">
+		</div>
+		<div class="form-group input-group-lg">
+			<input type="text" (change)="uploadText($event)">
+		</div>
+		<div class="form-group">
+			<input type="text" (change)="uploadText($event)">
+		</div>
+	</form>
+</div>-->
+
+<form action="" method="POST">
+	<input type="text" placeholder = "senderid..." name="userid">
+	<input type="text" placeholder = "recipid..." name="recipid">
+	<input type="text" placeholder = "data..." name="data">
+	<input type="submit" value="Insert">
+</form>
