--- a/front-end/frontend/src/app/insert/insert.component.html
+++ b/front-end/frontend/src/app/insert/insert.component.html
@@ -1,21 +1,13 @@
-<!--<h2> Add New Transaction:</h2>
-<div class="container">
-	<form [formGroup]="form" (ngSubmit)="submitForm()">
-		<div class="form-group">
-			<input type="text" (change)="uploadText($event)">
-		</div>
-		<div class="form-group input-group-lg">
-			<input type="text" (change)="uploadText($event)">
-		</div>
-		<div class="form-group">
-			<input type="text" (change)="uploadText($event)">
-		</div>
-	</form>
-</div>-->
-
-<form action="" method="POST">
-	<input type="text" placeholder = "senderid..." name="userid">
-	<input type="text" placeholder = "recipid..." name="recipid">
-	<input type="text" placeholder = "data..." name="data">
-	<input type="submit" value="Insert">
+<h2> Add New Transaction:</h2>
+<form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
+	<label>UserID:      </label>
+	<input type="text" [(ngModel)]="userid" name="userid" required>
+	<br/>
+	<label>RecipientID: </label>
+	<input type="text" [(ngModel)]="recipientid" name="recipientid" required>
+	<br/>
+	<label> Transaction Data: </label>
+	<input type="text" [(ngModel)]="data" name="data" required>
+	<br/>
+	<button type="submit"> Add </button>
 </form>
