--- a/front-end/frontend/src/app/insert/insert.component.html
+++ b/front-end/frontend/src/app/insert/insert.component.html
@@ -3,11 +3,11 @@
 	<table style="width:100%">
 		<tr>
 			<td><label>Sender ID:</label></td>
-			<td><input [(ngModel)]="datamodel.userid" name="userid" required></td>
+			<td><input [(ngModel)]="datamodel.senderID" name="senderID" required></td>
 		</tr>
 		<tr>
 			<td><label>Recipient ID:       </label></td>
-			<td><input type="text" [(ngModel)]="datamodel.recipientid" name="recipientid" required></td>
+			<td><input type="text" [(ngModel)]="datamodel.recipientID" name="recipientID" required></td>
 		</tr>	
 		<tr>
 			<td><label> Transaction Data:   </label></td>
