--- a/front-end/frontend/src/app/query/query.component.html
+++ b/front-end/frontend/src/app/query/query.component.html
@@ -21,8 +21,8 @@
         </thead>
         <tbody>
             <tr *ngFor="let tran of returnValue.transactions">
-                <td>{{tran.userid}}</td>
-                <td>{{tran.recipid}}</td>
+                <td>{{tran.userID}}</td>
+                <td>{{tran.recipID}}</td>
                 <td>{{tran.data}}</td>
             </tr>
         </tbody>
