update query all page

--- a/front-end/frontend/src/app/show-all/show-all.component.html
+++ b/front-end/frontend/src/app/show-all/show-all.component.html
@@ -4,8 +4,8 @@
     <table class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th>User ID</th>
-                <th>Recipient ID</th>
+                <th>Patient ID</th>
+                <th>Doctor ID</th>
                 <th>Data</th>
             </tr>
         </thead>
