front end updates

--- a/front-end/frontend/src/app/app.component.html
+++ b/front-end/frontend/src/app/app.component.html
@@ -300,7 +300,7 @@
 
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-  <span>Welcome to MWG ID</span>
+  <span>Welcome to MWGL ID</span>
     <div class="spacer"></div>
 </div>
 
