--- a/front-end/frontend/src/app/query/query.component.html
+++ b/front-end/frontend/src/app/query/query.component.html
@@ -17,6 +17,7 @@
                 <th>Patient ID</th>
                 <th>Doctor ID</th>
                 <th>Data</th>
+                <th>Notes</th>
             </tr>
         </thead>
         <tbody>
@@ -24,6 +25,7 @@
                 <td>{{tran.userID}}</td>
                 <td>{{tran.recipID}}</td>
                 <td>{{tran.data}}</td>
+                <td>{{tran.notes}}</td>
             </tr>
         </tbody>
     </table>
