--- a/front-end/frontend/src/app/insert/insert.component.html
+++ b/front-end/frontend/src/app/insert/insert.component.html
@@ -10,8 +10,12 @@
 			<td><input type="text" [(ngModel)]="datamodel.recipID" name="recipientID" required></td>
 		</tr>	
 		<tr>
-			<td><label> Transaction Data:   </label></td>
+			<td><label> Transaction Data:</label></td>
 			<td><input type="text" [(ngModel)]="datamodel.data" name="data" required></td>
+		</tr>
+		<tr>
+			<td><label> Additional Notes:</label></td>
+			<td><input type="text" [(ngModel)]="datamodel.notes" name="notes" required></td>
 		</tr>
 		<tr>
 			<td><button type="submit"> Add </button></td>
