--- a/front-end/frontend/src/app/show-all/show-all.component.html
+++ b/front-end/frontend/src/app/show-all/show-all.component.html
@@ -7,6 +7,7 @@
                 <th>Patient ID</th>
                 <th>Doctor ID</th>
                 <th>Data</th>
+                <th>Notes</th>
             </tr>
         </thead>
         <tbody>
@@ -14,6 +15,7 @@
                 <td>{{tran.userID}}</td>
                 <td>{{tran.recipID}}</td>
                 <td>{{tran.data}}</td>
+                <td>{{tran.notes}}</td>
             </tr>
         </tbody>
     </table>
